# dhaslumni

./: README.md  pyproject.toml
dhsalumni/: __main__.py  extract_data.py  get_league.py  league_config.py
dhsalumni/data/: extract_data.py
dhsalumni/league/: get_league.py
dhsalumni/tests/: test_dhsalumni.py
tests/: test_dhsalumni.py
