[tool.poetry]
name = "dhsalumni"
version = "0.1.0"
description = ""
authors = ["jberkowitz89 <jberkowitz89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
espn-api = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
